tests/fixtures/invalid/locale/broken-function-branch.lgl
form Label(Plural) {
  one {
    _ => item
  _ => items
}
